--- a/index.html
+++ b/index.html
@@ -23,25 +23,25 @@
                         <label for="new-first-name">First name</label>
                         <input type="text" class="form-control" id="new-first-name">
                       </div>
+
                       <div class="form-group">
                         <label for="new-last-name">Last name</label>
                         <input type="text" class="form-control" id="new-last-name">
                       </div>
-
                       <button type="submit" class="btn">Add</button>
                     </form>
-
                     <h2>Contacts:</h2>
                     <ul id="contacts">
-
                     </ul>
                   </div>
-                </div>
-
-
-
-      </div>
-    </center>
-
+                  <div class="col-md-6">
+                  <div id="show-contact">
+                      <h2>Show contact</h2>
+          <p>First name: <span class="first-name"></span></p>
+         <p>Last name: <span class="last-name"></span></p>
+  </div>
+</div>
+</div>
+</div>
   </body>
 </html>
