--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <center>
       <div class="container">
           <h1> Here's an address book incase you lost your phone </h1>
+          <img src="magic.jpg" alt="cat">
             <div class="row">
               <div class="col-md-6">
                 <h2>Add a contact:</h2>
@@ -26,35 +27,39 @@
                     <label for="new-last-name">Last name</label>
                     <input type="text" class="form-control" id="new-last-name">
                   </div>
-                    <div id="new-addresses">
-                      <div class="new-address">
-                        <div class="form-group">
-                          <label for="new-street">Street</label>
-                          <input type="text" class="form-control new-street">
-                        </div>
-                        <div class="form-group">
-                          <label for="new-city">City</label>
-                          <input type="text" class="form-control new-city">
-                        </div>
-                        <div class="form-group">
-                          <label for="new-state">State</label>
-                          <input type="text" class="form-control new-state">
-                        </div>
-                        <div class="form-group">
-                          <label for="new-country">Country</label>
-                          <input type="text" class="form-control new-country">
-                        </div>
+
+                  <div id="new-addresses">
+                    <div class="new-address">
+                      <div class="form-group">
+                        <label for="new-street">Street</label>
+                        <input type="text" class="form-control new-street">
+                      </div>
+                      <div class="form-group">
+                        <label for="new-city">City</label>
+                        <input type="text" class="form-control new-city">
+                      </div>
+                      <div class="form-group">
+                        <label for="new-state">State</label>
+                        <input type="text" class="form-control new-state">
+                      </div>
+                      <div class="form-group">
+                        <label for="new-country">Country</label>
+                        <input type="text" class="form-control new-country">
+                      </div>
+                      <div class="form-group">
+                        <label for="new-kind">Type of Address</label>
+                        <input type="text" class="form-control new-kind">
                       </div>
                     </div>
+                  </div>
                     <button type="submit" class="btn">Add</button>
                     <span class="btn btn-primary" id="add-address">Another address</span>
                   </div>
                 </form>
 
             <ul id="contacts">
-
             </ul>
-            <h2>Work Address:</h2>
+          </div>
             <div class="col-md-6">
               <div id="show-contact">
                 <h2>Contact:</h2>
